tests/NormalTests/paczka1/fuzzy1/52078861.err
Error in line 7: S370 S370 83,75
Error in line 3: JrXggzF S729 78,5
Error in line 8: S370 S370 332,3
Error in line 5: IX1o S729 15,3
Error in line 21: doDAC S370 2,8
Error in line 23: myy1qvIOX S370 56,8
